--- a/uploading-files/src/main/resources/templates/uploadForm.html
+++ b/uploading-files/src/main/resources/templates/uploadForm.html
@@ -7,7 +7,9 @@
 </div>
 
 <div>
-    <form method="POST" enctype="multipart/form-data" action="/">
+    <form method="POST" enctype="multipart/form-data" action="/" th:action="@{/}">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
         <table>
             <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
             <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
